<resources>
    <!-- common app -->
    <string name="app_name" translatable="false">skvirrel</string>
    <string name="author" translatable="false">by @rupert,</string>
    <string name="skvirrel_email" translatable="false">skvirrel.app@gmail.com</string>

    <!-- stock fragment -->
    <string name="enter_ticker_hint">Enter a ticker..</string>
    <string name="decimal_zero" translatable="false">0.00</string>
    <string name="zero" translatable="false">0</string>
    <string name="view_stock_info">View stock info</string>
    <string name="monitoring_options">Monitoring options</string>
    <string name="monitoring_status_default">Enter a ticker above and some monitoring options below to start monitoring.</string>
    <string name="monitoring_status_missing_ticker">Enter a ticker above to start monitoring.</string>
    <string name="monitoring_status_missing_monitoring_options">Enter some monitoring options below to start monitoring.</string>
    <string name="monitoring_status_ok">Monitoring active for %s.</string>
    <string name="monitoring_status_notified">Monitoring notified for %s, but is still active for %s. Reset notification to activate all monitorings again.</string>
    <string name="monitoring_status_all_notified">Monitoring notified for %s. Reset notification to activate monitoring again.</string>
    <string name="price">Price</string>
    <string name="below">Below</string>
    <string name="above">Above</string>
    <string name="pe_ratio" translatable="false">PE Ratio</string>
    <string name="rsi" translatable="false">RSI</string>
    <string name="rsi_14" translatable="false">RSI(14)</string>
    <string name="reset_notification">Reset notification</string>
    <string name="remove_stock_monitoring">Remove stock monitoring</string>
    <string name="and">and</string>

    <!-- dialogs -->
    <string name="confirm_dialog_dummy_title" translatable="false">Replace this title</string>
    <string name="confirm_dialog_dummy_message" translatable="false">Replace this message</string>
    <string name="confirm_dialog_dummy_button_positive" translatable="false">Positive</string>
    <string name="confirm_dialog_dummy_button_negative" translatable="false">Negative</string>
    <string name="remove_stock_monitoring_dialog_title">Remove stock monitoring</string>
    <string name="remove_stock_monitoring_dialog_message_with_stock">Are you sure you want to remove stock monitoring for %s(%s)?</string>
    <string name="remove_stock_monitoring_dialog_message_without_stock">Are you sure you want to remove stock monitoring?</string>
    <string name="remove_stock_monitoring_dialog_remove">Remove</string>
    <string name="remove_stock_monitoring_dialog_cancel">Cancel</string>
    <string name="stock_details_exchange_ticker_currency" translatable="false">%s: %s (%s)</string>
    <string name="stock_details_day_change" translatable="false">%s (%s)</string>
    <string name="stock_details_fetching_data">Fetching data</string>
    <string name="stock_details_summary_title">Summary</string>
    <string name="stock_details_indicators_title">Indicators</string>
    <string name="stock_details_previous_close_title">Previous Close</string>
    <string name="stock_details_open_title">Open</string>
    <string name="stock_details_low_title">Low</string>
    <string name="stock_details_high_title">High</string>
    <string name="stock_details_low_52_week_title">52wk Low</string>
    <string name="stock_details_high_52_week_title">52wk High</string>
    <string name="stock_details_market_cap_title">Market Cap</string>
    <string name="stock_details_volume_title">Volume</string>
    <string name="stock_details_volume_avg_title">Avg Volume(3M)</string>
    <string name="stock_details_pe_title">P/E Ratio(TTM)</string>
    <string name="stock_details_eps_title">EPS(TTM)</string>
    <string name="stock_details_earnings_date_title">Earnings Date</string>
    <string name="stock_details_dividend_title">Dividend</string>
    <string name="stock_details_sma_title">SMA(50,close)</string>
    <string name="stock_details_ema_title">EMA(50,close)</string>
    <string name="stock_details_rsi_title">RSI(14,close)</string>
    <string name="stock_details_close">Close</string>
    <string name="crash_report_dialog_title">Oh no&#128533;</string>
    <string name="crash_report_dialog_message">Unfortunately skvirrel has crashed, or in other words, the developer has f%#ked up!\nWould you like to help out with the investigation of the problem by sending the crash report to the developer?</string>
    <string name="crash_report_dialog_send">Send</string>
    <string name="crash_report_dialog_cancel" >Cancel</string>

    <!-- other stock related texts -->
    <string name="add_stock_monitoring">Add stock monitoring</string>

    <!-- notifications -->
    <string name="notification_channel_name">Stock monitorings</string>
    <string name="notification_channel_description">Let skvirrel notify upon triggering of stock monitorings</string>
    <string name="notification_title">Stock monitoring triggered for %s</string>

    <!-- getting started -->
    <string name="getting_started_title">Hi there&#128075;</string>
    <string name="getting_started">"Press the \"Add stock monitoring\" button above to get started. Then enter a ticker for the stock you would like to monitor along with one or more monitoring options of your interest and you are good to go&#128077;\nskvirrel is now monitoring the stock for you and will notify you if your monitoring trigger, easy peasy&#128512;"</string>

    <!-- crash report -->
    <string name="crash_report_email_subject" translatable="false">skvirrel crash report</string>
    <string name="crash_report_filename" translatable="false">skvirrel-crash-report.stacktrace</string>

    <!-- characters -->
    <string name="dash" translatable="false">-</string>

    <!-- keyboard -->
    <string name="keyboard_0" translatable="false">0</string>
    <string name="keyboard_1" translatable="false">1</string>
    <string name="keyboard_2" translatable="false">2</string>
    <string name="keyboard_3" translatable="false">3</string>
    <string name="keyboard_4" translatable="false">4</string>
    <string name="keyboard_5" translatable="false">5</string>
    <string name="keyboard_6" translatable="false">6</string>
    <string name="keyboard_7" translatable="false">7</string>
    <string name="keyboard_8" translatable="false">8</string>
    <string name="keyboard_9" translatable="false">9</string>

    <string name="keyboard_a" translatable="false">A</string>
    <string name="keyboard_b" translatable="false">B</string>
    <string name="keyboard_c" translatable="false">C</string>
    <string name="keyboard_d" translatable="false">D</string>
    <string name="keyboard_e" translatable="false">E</string>
    <string name="keyboard_f" translatable="false">F</string>
    <string name="keyboard_g" translatable="false">G</string>
    <string name="keyboard_h" translatable="false">H</string>
    <string name="keyboard_i" translatable="false">I</string>
    <string name="keyboard_j" translatable="false">J</string>
    <string name="keyboard_k" translatable="false">K</string>
    <string name="keyboard_l" translatable="false">L</string>
    <string name="keyboard_m" translatable="false">M</string>
    <string name="keyboard_n" translatable="false">N</string>
    <string name="keyboard_o" translatable="false">O</string>
    <string name="keyboard_p" translatable="false">P</string>
    <string name="keyboard_q" translatable="false">Q</string>
    <string name="keyboard_r" translatable="false">R</string>
    <string name="keyboard_s" translatable="false">S</string>
    <string name="keyboard_t" translatable="false">T</string>
    <string name="keyboard_u" translatable="false">U</string>
    <string name="keyboard_v" translatable="false">V</string>
    <string name="keyboard_w" translatable="false">W</string>
    <string name="keyboard_x" translatable="false">X</string>
    <string name="keyboard_y" translatable="false">Y</string>
    <string name="keyboard_z" translatable="false">Z</string>

    <string name="keyboard_dot" translatable="false">.</string>
    <string name="keyboard_dash" translatable="false">-</string>

    <!-- other -->
    <string name="filter_view_skvirrel" translatable="false">View skvirrel</string>
</resources>
