<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stock_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:background="@drawable/stock_fragment_background"
    android:paddingStart="6dp"
    android:paddingTop="4dp"
    android:paddingEnd="6dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/company_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_ticker_hint"
        android:textColor="@color/colorHeadingText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ax.stardust.skvirrel.component.widget.KeyboardlessEditText
        android:id="@+id/ticker_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_default"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:gravity="start|center_horizontal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorInputText"
        android:textCursorDrawable="@drawable/input_cursor_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view_stock_info_btn"
        app:layout_constraintTop_toBottomOf="@+id/company_tv" />

    <Button
        android:id="@+id/view_stock_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_black_selector"
        android:enabled="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/view_stock_info"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticker_et" />

    <TextView
        android:id="@+id/monitoring_options_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/monitoring_options"
        android:textColor="@color/colorHeadingText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_stock_info_btn" />

    <TextView
        android:id="@+id/monitoring_status_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/monitoring_status_default"
        android:textColor="@color/colorHeadingText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monitoring_options_tv"/>

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/price"
        android:textColor="@color/colorHeadingText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monitoring_status_tv" />

    <RadioGroup
        android:id="@+id/price_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:baselineAlignedChildIndex="0"
        android:baselineAligned="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_tv">

        <RadioButton
            android:id="@+id/price_below_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/radio_button_left_black_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:text="@string/below"
            android:textColor="@drawable/radio_button_text_selector"/>

        <RadioButton
            android:id="@+id/price_above_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:background="@drawable/radio_button_right_black_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:text="@string/above"
            android:textColor="@drawable/radio_button_text_selector"/>
    </RadioGroup>

    <ax.stardust.skvirrel.component.widget.KeyboardlessEditText
        android:id="@+id/price_et"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/input_default"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/decimal_zero"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorInputText"
        android:textCursorDrawable="@drawable/input_cursor_default"
        app:layout_constraintStart_toEndOf="@id/price_rg"
        app:layout_constraintTop_toTopOf="@id/price_rg"
        app:layout_constraintBottom_toBottomOf="@id/price_rg"/>

    <TextView
        android:id="@+id/rsi_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/rsi_14"
        android:textColor="@color/colorHeadingText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_rg" />

    <RadioGroup
        android:id="@+id/rsi_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:baselineAlignedChildIndex="0"
        android:baselineAligned="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rsi_tv">

        <RadioButton
            android:id="@+id/rsi_below_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/radio_button_left_black_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:text="@string/below"
            android:textColor="@drawable/radio_button_text_selector"/>

        <RadioButton
            android:id="@+id/rsi_above_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/radio_button_right_black_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"
            android:text="@string/above"
            android:textColor="@drawable/radio_button_text_selector"/>
    </RadioGroup>

    <ax.stardust.skvirrel.component.widget.KeyboardlessEditText
        android:id="@+id/rsi_et"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/input_default"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/zero"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorInputText"
        android:textCursorDrawable="@drawable/input_cursor_default"
        app:layout_constraintStart_toEndOf="@id/rsi_rg"
        app:layout_constraintTop_toTopOf="@id/rsi_rg"
        app:layout_constraintTop_toBottomOf="@id/rsi_tv"/>

    <Button
        android:id="@+id/reset_notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_black_selector"
        android:enabled="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/reset_notification"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsi_rg" />

    <Button
        android:id="@+id/remove_stock_monitoring_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_red_selector"
        android:fontFamily="@font/montserrat"
        android:text="@string/remove_stock_monitoring"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_notification_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>