<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skvirrel_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Skvirrel">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/stock_monitoring_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingStart="7dp"
            android:paddingTop="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="7dp">

            <LinearLayout
                android:id="@+id/stock_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/add_stock_monitoring_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/add_stock_monitoring_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_black_selector"
                    android:fontFamily="@font/montserrat"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/add_stock_monitoring"
                    android:textAllCaps="false"
                    android:textColor="@color/colorButtonText" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/getting_started_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/getting_started_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/getting_started_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeadingText"
                    android:textSize="18sp"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/getting_started_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/getting_started_title_tv"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/getting_started"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    tools:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/keyboard_author_version_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:animateLayoutChanges="true"
        android:gravity="bottom|fill_horizontal|end"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <ax.stardust.skvirrel.component.keyboard.NumericKeyboard
            android:id="@+id/numeric_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">
        </ax.stardust.skvirrel.component.keyboard.NumericKeyboard>

        <ax.stardust.skvirrel.component.keyboard.AlphanumericKeyboard
            android:id="@+id/alphanumeric_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">
        </ax.stardust.skvirrel.component.keyboard.AlphanumericKeyboard>

        <RelativeLayout
            android:id="@+id/author_version_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/author_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/author"
                android:textColor="@color/colorText"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/version_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_toEndOf="@id/author_tv"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/version_name"
                android:textColor="@color/colorText"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>